fix: migrate gcreport from project plugin to settings plugin (#68)